--- a/style.css
+++ b/style.css
@@ -132,3 +132,20 @@ align-items: center;
     font-size: 15px;
     font-weight: bold;
 }
+.redTable {
+margin-top: 50px;
+color: white;
+background-color: #F5225C;
+margin-left: auto;
+margin-right: auto;
+}
+.redTable td{
+    border: 5px solid;
+    border-color: white;
+    padding: 1em;
+    
+}
+.redTable tr{
+    margin-left: auto;
+    margin-right: auto;
+}
