--- a/style.css
+++ b/style.css
@@ -4,29 +4,13 @@
 header{
     background-color: #F5225C;
     color: white;
-    height: 200px;
-    margin:-20px;
     
 }
-header img{
-    max-width: 200px;
-    float: left;
-}
-header li{
-    display: inline-block;
-    padding: 70px;
-    font-size: 2em;
-
-}
-header li:hover {
+.color a:hover {
     background-color: #16F4B2;
     text-decoration:none;
     color: black;
     }
-header ul{
-    text-align: center;
-    list-style-type: none;
-}
 .container ul{
     text-decoration: none;
 
@@ -51,13 +35,23 @@ header ul{
     border: none;
     font-size: 1.5em;
 }
-.container input:hover {
+.container input:hover{
     background-color: #16F4B2;
     text-decoration:none;
     color: black;
+
     }
+    .container a:hover{
+        background-color: #16F4B2;
+        text-decoration:none;
+        color: black;
+        padding:1em;
+        }
 .container p{
     font-size: 2em;
+}
+.container li{
+    margin-bottom: 25px;
 }
 footer{
     background-color: #f5225c;
@@ -152,4 +146,199 @@ margin-right: auto;
 }
 label{
     font-size: 1.2em;
+}
+tr{
+    margin-bottom:25px;
+}
+.white{
+    color:white;
+}
+.form-group{
+    margin:10px;
+}
+nav{
+    height: 200px;
+    width: 100%;
+}
+/* Icon 1 */
+
+.animated-icon1, .animated-icon2, .animated-icon3 {
+    width: 30px;
+    height: 20px;
+    position: relative;
+    margin: 0px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+  }
+  
+  .animated-icon1 span, .animated-icon2 span, .animated-icon3 span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+  }
+  
+  .animated-icon1 span {
+    background: #e3f2fd;
+  }
+  
+  .animated-icon2 span {
+    background: #e3f2fd;
+  }
+  
+  .animated-icon3 span {
+    background: #f3e5f5;
+  }
+  
+  .animated-icon1 span:nth-child(1) {
+   top: 0px;
+  }
+  
+  .animated-icon1 span:nth-child(2) {
+    top: 10px;
+  }
+  
+  .animated-icon1 span:nth-child(3) {
+    top: 20px;
+  }
+  
+  .animated-icon1.open span:nth-child(1) {
+    top: 11px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+  }
+  
+  .animated-icon1.open span:nth-child(2) {
+    opacity: 0;
+    left: -60px;
+  }
+  
+  .animated-icon1.open span:nth-child(3) {
+    top: 11px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+  }
+  
+  /* Icon 3*/
+  
+  .animated-icon2 span:nth-child(1) {
+    top: 0px;
+  }
+  
+  .animated-icon2 span:nth-child(2), .animated-icon2 span:nth-child(3) {
+    top: 10px;
+  }
+  
+  .animated-icon2 span:nth-child(4) {
+    top: 20px;
+  }
+  
+  .animated-icon2.open span:nth-child(1) {
+    top: 11px;
+    width: 0%;
+    left: 50%;
+  }
+  
+  .animated-icon2.open span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  
+  .animated-icon2.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  
+  .animated-icon2.open span:nth-child(4) {
+    top: 11px;
+    width: 0%;
+    left: 50%;
+  }
+  
+  /* Icon 4 */
+  
+  .animated-icon3 span:nth-child(1) {
+    top: 0px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+  }
+  
+  .animated-icon3 span:nth-child(2) {
+    top: 10px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+  }
+  
+  .animated-icon3 span:nth-child(3) {
+    top: 20px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+  }
+  
+  .animated-icon3.open span:nth-child(1) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    top: 0px;
+    left: 8px;
+  }
+  
+  .animated-icon3.open span:nth-child(2) {
+    width: 0%;
+    opacity: 0;
+  }
+  
+  .animated-icon3.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: 21px;
+    left: 8px;
+  }
+  #navbarSupportedContent20{
+    background-color:#16F4B2;
+    color: black;
+    z-index: 999;
+    text-decoration: none;
+  }
+#nbr{
+    font-size: 2em;
+  }
+ol{
+    padding: 2em;
+    font-size: 1.6em;
 }
